# sentinel-iam

./: .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: NOTES_phase0.md  NOTES_phase1.md  NOTES_phase2.md
src/sentinel/: __init__.py  config.py  generator.py  normalize.py  schema.py
tests/: test_config.py  test_generator.py  test_normalize.py  test_schema.py
