[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-iam"
version = "0.1.0"
description = "Real-time IAM anomaly & out-of-distribution detection on streaming auth logs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Venkateswarlu Nagineni" }]
keywords = ["anomaly-detection", "streaming", "kafka", "spark", "security", "mlops"]

dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
# Heavy infra deps are layered in as later phases land them.
stream = ["pyspark>=3.5", "kafka-python>=2.0", "redis>=5.0"]
ml = ["hdbscan>=0.8.33", "transformers>=4.40", "torch>=2.2", "evidently>=0.4"]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
